--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.0",
     "axios-hooks": "^2.2.0",
     "bootstrap": "^4.5.3",
+    "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
@@ -55,6 +56,7 @@
     "@storybook/node-logger": "^6.1.9",
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.9",
+    "@types/lodash": "^4.14.165",
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
     "storybook": "^6.1.9"
